--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-**/symbol_texture_image_conv_net/dataset/*
+Basic_Models/*
+Symbol_Texture_Image_Conv_Net/dataset/*
+Symbol_Texture_Image_Conv_Net/dataset_80_20/*
